Fixed #2710: User API: Rework create user method. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3344 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4145,13 +4145,14 @@ item_level_sdv_status_changed = You have changed SDV status from Specific Items 
 configuration_saved_successfully_please_note = Items SDV configuration was updated successfully. Please note that it will be saved only when all changes for Event Definition will be submitted.
 item_sdv_configuration_changed_save_it = Items SDV configuration was changed. Do you want to save changes?
 rest.usertype.valueDescription=1 -> ADMINISTRATOR, 2 -> USER
-rest.role.valueDescription=1 -> SYSTEM_ADMINISTRATOR, 2 -> STUDY_ADMINISTRATOR, 6 -> STUDY_MONITOR, 7 -> STUDY_CODER, 8 -> STUDY_EVALUATOR, 4 -> INVESTIGATOR, 5 -> CLINICAL_RESEARCH_COORDINATOR, 9 -> SITE_MONITOR
+rest.roles.valueDescription=2 -> STUDY_ADMINISTRATOR, 6 -> STUDY_MONITOR, 7 -> STUDY_CODER, 8 -> STUDY_EVALUATOR, 10 -> STUDY_SPONSOR, 4 -> INVESTIGATOR, 5 -> CLINICAL_RESEARCH_COORDINATOR, 9 -> SITE_MONITOR
 rest.propagatechange.valueDescription=1 -> Yes, unconditionally, 2 -> Yes, but preserve different settings, 3 -> No
 rest.sourcedataverification.valueDescription=1 -> Entire CRF, 2 -> Specific Items, 3 -> Not Required
 rest.dataentryquality.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
 rest.emailwhen.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
 rest.dataentryquality.withNone.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
 rest.emailwhen.withNone.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
+rest.wadl.title=ClinCapture REST API Service WADL
 
 your_file_being_uploaded = Your file is being uploaded. Please wait...
 your_file = Your file
