Fixed #2758: Ability to completely delete an event. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3350 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4158,6 +4158,13 @@ your_file_being_uploaded = Your file is being uploaded. Please wait...
 your_file = Your file
 was_successfully_uploaded = was successfully uploaded.
 will_be_saved_in_db_when_crf_is_saved = It will be saved in the database when CRF is saved.
+
+you_are_trying_to_delete_event_with_crfs = Event cannot be deleted. Please delete all CRFs from it first.
+you_are_trying_to_delete_event_definition_but_study_events_are_present = Event cannot be deleted. Please delete all Study Events.
+please_delete_all_event_crfs = Please delete all Event Definition CRFs and then try to delete this Event Definition.
+please_delete_all_study_events = Please delete all Study Events and then try to delete this Event Definition.
+study_event_definition_was_successfully_deleted = Study Event Definition {0} was successfully deleted.
+
 subject_audit = Subject Audit
 study_events_audit = Study Events Audit
 event_crfs_audit = Event CRFs Audit
