Fixed #2756: Tasks > Rules is empty but deleting a CRF says their are associated rules preventing deletion. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3364 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4175,3 +4175,5 @@ event_description = Event Description
 randomization.call.result.success = Subject was randomized successfully
 randomization.call.result.error = Randomization attempt failed
 stratificationVariables = Stratification Variables
+
+last_version_of_crf_all_crf_rules_should_be_deleted = This is the last version of the CRF. All CRF rules should be deleted.
