Fixed #1784: User API: Query_User. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3381 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -77,6 +77,9 @@ rest.userservice.removeuser.empty.username=Username parameter is empty
 rest.userservice.restoreuser.missing.username=Username parameter is missing
 rest.userservice.restoreuser.empty.username=Username parameter is empty
 
+rest.userservice.getuser.missing.username=Username parameter is missing
+rest.userservice.getuser.empty.username=Username parameter is empty
+
 rest.eventservice.cannotPerformOperationOnEDCBecauseTheSEDIsNotAvailable=Cannot perform operation on Event Definition Crf because the Study Event Definition is not available
 rest.eventservice.studyEventDefinitionDoesNotBelongToCurrentScope=Study Event Definition with id ''{0}'' does not belong to current scope
 rest.eventservice.isNotFound=Study Event Definition with id ''{0}'' is not found
@@ -116,8 +119,8 @@ rest.eventservice.editsitecrf.siteDoesNotBelongToCurrentScope=Site ''{0}'' does 
 rest.eventservice.editevent.empty.id=Id parameter is empty
 rest.eventservice.editevent.missing.id=Id parameter is missing
 
-rest.eventservice.getinfo.missing.id=Id parameter is missing
-rest.eventservice.getinfo.empty.id=Id parameter is empty
+rest.eventservice.geteventdefinition.missing.id=Id parameter is missing
+rest.eventservice.geteventdefinition.empty.id=Id parameter is empty
 
 rest.eventservice.remove.missing.id=Id parameter is missing
 rest.eventservice.remove.empty.id=Id parameter is empty
