Fixed #2737: Disable "Create User", "Password Policies", "Login Lockout" buttons on Task/Users. Submitted by: igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3394 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -352,6 +352,8 @@ wrong_old_password = Wrong old password.
 
 you_are_trying_to = You are trying to
 
+you_may_not_have_access_to_this_page = You may not have access to this page
+
 you_may_not_modify_items = You should not modify the Data Types or Units of items already included in this CRF.
 
 you_may_not_perform_administrative_functions = You may not perform administrative functions
@@ -360,7 +362,7 @@ you_may_not_perform_technical_admin_functions = You may not perform technical ad
 
 you_not_have_permission_to_update_a_CRF = You do not have permission to update a CRF.
 
-no_permission_administrative_editing = You do not have permission to perform adnimistrative editing.
+no_permission_administrative_editing = You do not have permission to perform administrative editing.
 # Add terms below this line for ClinCapture-2.5
 exceeds_width = Input exceeds required width
 exceeds_decimal = Input exceeds required decimal
