--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -523,6 +523,9 @@ you_are_trying_to = \u0412\u044b \u043f\u044b\u0442\u0430\u0435\u0442\u0435\u044
 #you_may_not_modify_items =  You may not modify the Description, Data Type, Units, or PHI Status of items already included in this CRF.
 #you_may_not_modify_items = Вы можете не менять Description, Data Type, Units, или  PHI Status имеющихся в ИРК переменных.
 you_may_not_modify_items = \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043d\u0435 \u043c\u0435\u043d\u044f\u0442\u044c \u0044\u0065\u0073\u0063\u0072\u0069\u0070\u0074\u0069\u006f\u006e\u002c \u0044\u0061\u0074\u0061 \u0054\u0079\u0070\u0065\u002c \u0055\u006e\u0069\u0074\u0073\u002c \u0438\u043b\u0438  \u0050\u0048\u0049 \u0053\u0074\u0061\u0074\u0075\u0073 \u0438\u043c\u0435\u044e\u0449\u0438\u0445\u0441\u044f \u0432 \u0418\u0420\u041a \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u0445\u002e
+#you_may_not_have_access_to_this_page = You may not have access to this page
+#you_may_not_have_access_to_this_page = У вас нет доступа к этой странице.
+you_may_not_have_access_to_this_page = \u0423 \u0432\u0430\u0441 \u043d\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u0430 \u043a \u044d\u0442\u043e\u0439 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435\u002e
 #you_may_not_perform_administrative_functions =  You may not perform administrative functions
 #you_may_not_perform_administrative_functions = Вы не можете осуществлять административные функции.
 you_may_not_perform_administrative_functions = \u0412\u044b \u043d\u0435 \u043c\u043e\u0436\u0435\u0442\u0435 \u043e\u0441\u0443\u0449\u0435\u0441\u0442\u0432\u043b\u044f\u0442\u044c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u0438\u0432\u043d\u044b\u0435 \u0444\u0443\u043d\u043a\u0446\u0438\u0438\u002e
