property files must be in UTF-8
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3404 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_es_MX.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_es_MX.properties
@@ -23,7 +23,7 @@ Closed = Cerrado(a)
 #DO NOT CHANGE THE TEXT FOR DATA ENTRY PERSON
 Data_Entry_Person = Entrada de Datos de Persona
 
-Demographic = Demogrбfico
+Demographic = Demográfico
 
 Dynamic_Group = Grupo din\u00E1mico
 
@@ -188,9 +188,9 @@ entity_action = entity_action
 
 equal_to = igual a
 
-failed_login = Fallу inicio de sesi\u00F3n
+failed_login = Falló inicio de sesi\u00F3n
 
-failed_login_locked = Fallу inicio de sesi\u00F3n ( Cuenta bloqueada )
+failed_login_locked = Falló inicio de sesi\u00F3n ( Cuenta bloqueada )
 
 file = archivo
 
@@ -240,7 +240,7 @@ locked = bloqueado
 
 masked = cegado
 
-multi-select = selecci\u00F3n mъltiple
+multi-select = selecci\u00F3n múltiple
 
 negative_infinity = infinito negativo
 
@@ -314,7 +314,7 @@ sign = firma
 
 signed = firmado
 
-single_select = selecci\u00F3n ъnica
+single_select = selecci\u00F3n única
 
 skipped = omitido(a)
 
@@ -339,7 +339,7 @@ text = texto
 
 text/plain = texto/simple
 
-textarea = Бrea de texto
+textarea = Área de texto
 
 treatment = tratamiento
 
