--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -816,6 +816,22 @@ delete_event_CRF = Delete Event CRF
 
 delete_event = Delete Event From Study
 
+confirm_deletion_of_event_from_study = Confirm deletion of Event from Study
+
+confirm_deletion_of_study_event_definition_header = Confirm deletion of Study Event Definition
+
+confirm_deletion_of_study_event_definition_sub_header = This operation will permanently delete this Study Event definition and cannot be undone.
+
+confirm_deletion_of_study_event_definition_msg1 = Please delete all CRFs related to this Study Event Definition.
+
+confirm_deletion_of_study_event_definition_msg2 = Please delete all CRFs related to this Study Event Definition, then delete the event itself for associated subjects.
+
+confirm_delete_crf_from_event_definition_header = Confirm deletion of CRF from Event Definition
+
+associated_event_definition_crfs = Associated Event Definition CRFs
+
+associated_subjects_study_events = Associated Subjects' Study Events
+
 deleted_by = Deleted By
 
 descending_sort = descending sort
@@ -4127,11 +4143,12 @@ propagate_change = Propagate change
 yes_unconditionally = Yes, unconditionally
 yes_preserve_different = Yes, but preserve different settings
 
-delete_crf_from_definition = Delete CRF from Event Definition.
 data_is_present_for_this_crf = Some data is present fot this CRF. Please delete all data first.
 data_entry_has_been_started_for_this_event_definition_crf = Data Entry has been started into this Event Definition CRF for the following subject:
 this_event_definition_crf_mentioned_in_rules = This Event Definition CRF is mentioned in the following rules:
-confirm_delete_crf_from_definition = Are you sure you want to delete this CRF from event?
+confirm_delete_event = Are you sure you want to delete this Event?
+confirm_delete_crf_from_event_definition = Are you sure you want to delete this CRF from Event Definition?
+confirm_delete_study_event_definition = Are you sure you want to delete this Study Event Definition?
 started_event_crf_found = Started event CRF found, unable to delete this Event Definition CRF.
 crf_was_deleted_from_event_definition = CRF {0} has been successfully deleted from event {1}.
 
