--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -1217,6 +1217,39 @@ delete_event_CRF  = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0418\u0420\u041
 #delete_event  =  Delete Event From Study
 #delete_event  = Удалить событие из исследования
 delete_event  = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0437 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
+#confirm_deletion_of_event_from_study = Confirm deletion of Event from Study
+#confirm_deletion_of_event_from_study = Подтвердить удаление события из исследования
+confirm_deletion_of_event_from_study = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u0435 \u0441\u043E\u0431\u044B\u0442\u0438\u044F \u0438\u0437 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#confirm_deletion_of_study_event_definition_header = Confirm deletion of Study Event Definition
+#confirm_deletion_of_study_event_definition_header = Подтвердить удаление определение события исследования
+confirm_deletion_of_study_event_definition_header = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u0435 \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u0435 \u0441\u043E\u0431\u044B\u0442\u0438\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#confirm_deletion_of_study_event_definition_sub_header = This operation will permanently delete this Study Event definition and cannot be undone.
+#confirm_deletion_of_study_event_definition_sub_header = Эта операция окончательно удалит определение события исследования.
+confirm_deletion_of_study_event_definition_sub_header = \u042D\u0442\u0430 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u044F \u043E\u043A\u043E\u043D\u0447\u0430\u0442\u0435\u043B\u044C\u043D\u043E \u0443\u0434\u0430\u043B\u0438\u0442 \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u0435 \u0441\u043E\u0431\u044B\u0442\u0438\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F.
+#confirm_deletion_of_study_event_definition_msg1 = Please delete all CRFs related to this Study Event Definition.
+#confirm_deletion_of_study_event_definition_msg1 = Пожалуйста, удалите все ИРК, связанные с этим определением события исследования.
+confirm_deletion_of_study_event_definition_msg1 = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0443\u0434\u0430\u043B\u0438\u0442\u0435 \u0432\u0441\u0435 \u0418\u0420\u041A, \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0441 \u044D\u0442\u0438\u043C \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u0435\u043C \u0441\u043E\u0431\u044B\u0442\u0438\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F.
+#confirm_deletion_of_study_event_definition_msg2 = Please delete all CRFs related to this Study Event Definition, then delete the event itself for associated subjects.
+#confirm_deletion_of_study_event_definition_msg2 = Пожалуйста, удалите все ИРК, связанные с этим определением события исследования, а затем удалите само событие для всех связанных с ним субъектов.
+confirm_deletion_of_study_event_definition_msg2 = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0443\u0434\u0430\u043B\u0438\u0442\u0435 \u0432\u0441\u0435 \u0418\u0420\u041A, \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0441 \u044D\u0442\u0438\u043C \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u0435\u043C \u0441\u043E\u0431\u044B\u0442\u0438\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F, \u0430 \u0437\u0430\u0442\u0435\u043C \u0443\u0434\u0430\u043B\u0438\u0442\u0435 \u0441\u0430\u043C\u043E \u0441\u043E\u0431\u044B\u0442\u0438\u0435 \u0434\u043B\u044F \u0432\u0441\u0435\u0445 \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0445 \u0441 \u043D\u0438\u043C \u0441\u0443\u0431\u044A\u0435\u043A\u0442\u043E\u0432.
+#confirm_delete_crf_from_event_definition_header = Confirm deletion of CRF from Event Definition
+#confirm_delete_crf_from_event_definition_header = Подтвердить удаление ИРК из определения события
+confirm_delete_crf_from_event_definition_header = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u0435 \u0418\u0420\u041A \u0438\u0437 \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u044F
+#associated_event_definition_crfs = Associated Event Definition CRFs
+#associated_event_definition_crfs = Связанные названия событий
+associated_event_definition_crfs = \u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u0439
+#associated_subjects_study_events = Associated Subjects' Study Events
+#associated_subjects_study_events = Субъекты связанные с событиями исследования
+associated_subjects_study_events = \u0421\u0443\u0431\u044A\u0435\u043A\u0442\u044B \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0441 \u0441\u043E\u0431\u044B\u0442\u0438\u044F\u043C\u0438 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#confirm_delete_study_event_definition = Are you sure you want to delete this Study Event Definition?
+#confirm_delete_study_event_definition = Вы уверены, что хотите удалить это определение события исследования
+confirm_delete_study_event_definition = \u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u043E \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u0435 \u0441\u043E\u0431\u044B\u0442\u0438\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#confirm_delete_crf_from_event_definition = Are you sure you want to delete this CRF from Event Definition?
+#confirm_delete_crf_from_event_definition = Вы уверены, что хотите удалить это ИРК из определения события
+confirm_delete_crf_from_event_definition = \u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u043E \u0418\u0420\u041A \u0438\u0437 \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u044F
+#confirm_delete_event = Are you sure you want to delete this event?
+#confirm_delete_event = Вы уверены, что хотите удалить это событие
+confirm_delete_event = \u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u043E \u0441\u043E\u0431\u044B\u0442\u0438\u0435
 #deleted_by  =  Deleted By
 #deleted_by  = Удалил(а)
 deleted_by  = \u0423\u0434\u0430\u043b\u0438\u043b\u0028\u0430\u0029
