Fixed #2873: Typo on new screen text in Event Definition Deletion. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3494 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4143,7 +4143,7 @@ propagate_change = Propagate change
 yes_unconditionally = Yes, unconditionally
 yes_preserve_different = Yes, but preserve different settings
 
-data_is_present_for_this_crf = Some data is present fot this CRF. Please delete all data first.
+data_is_present_for_this_crf = Some data is present for this CRF. Please delete all data first.
 data_entry_has_been_started_for_this_event_definition_crf = Data Entry has been started into this Event Definition CRF for the following subject:
 this_event_definition_crf_mentioned_in_rules = This Event Definition CRF is mentioned in the following rules:
 confirm_delete_event = Are you sure you want to delete this Event?
