Fixed #2662: Event API: Edit Site CRF_Event. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3530 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -554,9 +554,10 @@ eventDefinitionValidator.userNameIsUsedForCalendaredEventsOnly=User Name is used
 eventDefinitionValidator.provideEmailAddress=Please provide email address.
 eventDefinitionValidator.emailAddressIsNotValid=Email address is not valid.
 eventDefinitionValidator.emailCanBeSpecifiedOnlyIf=Email can be specified only if parameter emailwhen is set to 'complete' or 'sign'.
-eventDefinitionValidator.defaultVersionShouldBePresentInTheAvailableVersions=Default version should be present in the 'availableVersions'.
+eventDefinitionValidator.defaultVersionShouldBePresentInTheAvailableVersions=Default version id should be present in the 'availableVersions'.
 eventDefinitionValidator.crfDoesNotHaveVersion=CRF ''{0}'' does not have version ''{1}''.
 eventDefinitionValidator.availableVersionsIsEmpty=AvailableVersions parameter is empty.
+eventDefinitionValidator.availableVersionsShouldContainCommaSeparatedCRFVersionIds=AvailableVersions parameter should contain comma separated crf version ids.
 eventDefinitionValidator.alreadyExists=Event Definition Crf for Crf ''{0}'' already exists in study event definition ''{1}''
 eventDefinitionValidator.isNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''
 eventDefinitionValidator.crfEvaluationIsNotAvailable=CRF evaluation is not available.
