--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -86,7 +86,7 @@ rest.userservice.getuser.empty.username=Username parameter is empty
 rest.eventservice.cannotPerformOperationOnSEDBecauseTheSEDIsNotAvailable=Cannot perform operation on Study Event Definition because the Study Event Definition is not available
 rest.eventservice.cannotPerformOperationOnEDCBecauseTheSEDIsNotAvailable=Cannot perform operation on Event Definition Crf because the Study Event Definition is not available
 rest.eventservice.studyEventDefinitionDoesNotBelongToCurrentScope=Study Event Definition with id ''{0}'' does not belong to current scope
-rest.eventservice.isNotFound=Study Event Definition with id ''{0}'' is not found
+rest.eventservice.studyEventDefinitionIsNotFound=Study Event Definition with id ''{0}'' is not found
 rest.eventservice.crfNameIsNotFound=Crf is not found with name ''{0}''
 rest.eventservice.eventDefinitionCrfIsNotFoundInStudy=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in study ''{2}''
 rest.eventservice.eventDefinitionCrfIsNotFoundInSite=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in site ''{2}''
