--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4187,3 +4187,6 @@ randomization.call.result.error = Randomization attempt failed
 stratificationVariables = Stratification Variables
 
 last_version_of_crf_all_crf_rules_should_be_deleted = This is the last version of the CRF. All CRF rules should be deleted.
+
+auto_populate_with_current_date_upon_creation = Auto-populate with current date upon subject creation
+will_be_auto_populated_if_blank = Please note that this field will be auto-populated by current date if you will left it blank.
