Fixed #2859: Add timezones to Randomization Date. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3543 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4175,6 +4175,8 @@ please_delete_all_event_crfs = Please delete all Event Definition CRFs and then 
 please_delete_all_study_events = Please delete all Study Events and then try to delete this Event Definition.
 study_event_definition_was_successfully_deleted = Study Event Definition {0} was successfully deleted.
 
+date_is_shown_in_the_timezone = Date is shown in {0} Timezone
+
 subject_audit = Subject Audit
 study_events_audit = Study Events Audit
 event_crfs_audit = Event CRFs Audit
