Fixed #2928: Raise alerts on denied access charts for Study Sponsor. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3560 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4192,3 +4192,4 @@ last_version_of_crf_all_crf_rules_should_be_deleted = This is the last version o
 
 auto_populate_with_current_date_upon_creation = Auto-populate with current date upon subject creation
 will_be_auto_populated_if_blank = Please note that this field will be auto-populated by current date if you will left it blank.
+sponsor_no_privileges_for_chart = Study Sponsor does not have privileges to access details for this chart.
