Fixed #1848: Change Dynamic Groups to allow same group names across Studies. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3578 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -76,7 +76,7 @@ function_is_invalid_or_not_supported = is not a valid function or has not been s
 
 group_class_is_required = This group class is required.
 
-group_class_name_used_choose_unique = Group Class name has been used, please choose a unique name.
+group_class_name_used_choose_unique = Group Class name has been used in this study, please choose a unique name.
 
 group_class_type_is_required = Group Class Type is required.
 
