--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -107,8 +107,8 @@ function_is_invalid_or_not_supported = \u044d\u0442\u043e \u043d\u0435\u0432\u04
 #group_class_is_required = Требуется класс группы
 group_class_is_required = \u0422\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044f \u043a\u043b\u0430\u0441\u0441 \u0433\u0440\u0443\u043f\u043f\u044b
 #group_class_name_used_choose_unique =  Group Class name has been used, please choose a unique name.
-#group_class_name_used_choose_unique = Название класса группы уже используется, выберите другое название.
-group_class_name_used_choose_unique = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u043a\u043b\u0430\u0441\u0441\u0430 \u0433\u0440\u0443\u043f\u043f\u044b \u0443\u0436\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u0442\u0441\u044f\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0440\u0443\u0433\u043e\u0435 \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435\u002e
+#group_class_name_used_choose_unique = Название класса группы уже используется в этом Исследовании, выберите другое название.
+group_class_name_used_choose_unique = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u043a\u043b\u0430\u0441\u0441\u0430 \u0433\u0440\u0443\u043f\u043f\u044b \u0443\u0436\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u0442\u0441\u044f \u0432 \u044d\u0442\u043e\u043c \u0418\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0438\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0440\u0443\u0433\u043e\u0435 \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435\u002e
 #group_class_type_is_required =  Group Class Type is required.
 #group_class_type_is_required = Требуется тип класса группы.
 group_class_type_is_required = \u0422\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044f \u0442\u0438\u043f \u043a\u043b\u0430\u0441\u0441\u0430 \u0433\u0440\u0443\u043f\u043f\u044b\u002e
