Fixed #1788: Study API: Create_Study. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3584 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -20,6 +20,8 @@ rest.dataEntryQualityWithNone.valueDescription=dde -> Double Data Entry, evaluat
 rest.emailWhen.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
 rest.emailWhenWithNone.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
 rest.propagateChange.valueDescription=1 -> Yes, unconditionally, 2 -> Yes, but preserve different settings, 3 -> No
+rest.protocolType.valueDescription=0 -> Interventional, 1 -> Observational
+rest.yesNo.valueDescription=yes, no
 
 rest.wadl.title=ClinCapture REST API Service WADL
 
@@ -156,3 +158,18 @@ rest.crfservice.importcrf.operationFailed=Failed to import new crf
 rest.crfservice.importcrfversion.missing.jsondata=Json Data parameter is missing
 rest.crfservice.importcrfversion.empty.jsondata=Json Data parameter is empty
 rest.crfservice.importcrfversion.operationFailed=Failed to import new crf version
+
+rest.studyservice.createstudy.userDoesNotExist=User ''{0}'' does not exist
+rest.studyservice.createstudy.operationFailed=Failed to create study
+rest.studyservice.createstudy.missing.studyname=Study Name parameter is missing
+rest.studyservice.createstudy.empty.studyname=Study Name parameter is empty
+rest.studyservice.createstudy.missing.protocolid=Protocol Id parameter is missing
+rest.studyservice.createstudy.empty.protocolid=Protocol Id parameter is empty
+rest.studyservice.createstudy.missing.protocoltype=Protocol Type parameter is missing
+rest.studyservice.createstudy.empty.protocoltype=Protocol Type parameter is empty
+rest.studyservice.createstudy.missing.summary=Summary parameter is missing
+rest.studyservice.createstudy.empty.summary=Summary parameter is empty
+rest.studyservice.createstudy.missing.principalinvestigator=Principal Investigator parameter is missing
+rest.studyservice.createstudy.empty.principalinvestigator=Principal Investigator parameter is empty
+rest.studyservice.createstudy.missing.sponsor=Sponsor parameter is missing
+rest.studyservice.createstudy.empty.sponsor=Sponsor parameter is empty
