--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1380,6 +1380,9 @@ please_update_coding_item_type_to_code = Please update coding item type to CODE
 please_update_medical_coding_reference_item_type = Please update medical coding reference item type to ST
 does_not_have_access_for_subject_casebook = Authorised user does not have access for current subject casebook.
 
+xml_multiple_tags_for_same_subject = There are multiple tags for the same Subject with OID {0}.
+xml_multiple_tags_for_same_event = There are multiple tags for the same Event with oid {0} for Subject {1}.
+xml_multiple_tags_for_same_crf = There are multiple tags for the CRF with OID {0} in Event {1} for Subject {2}.
 workbook.blankFound=Blank row found in sheet CRF.
 workbook.isNotValid=The excel spreadsheet doesn't have required valid worksheets. Please check whether it contains sheets of CRF, Sections and Items.
 
