Fixed #1790: Study API: Edit_Study. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3600 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/admin_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/admin_en.properties
@@ -27,6 +27,7 @@ interventional=Interventional
 longitudinal=Longitudinal
 male=Male
 n_a = N/A
+select=-Select-
 natural_history=Natural History
 no_longer_recruiting = No longer Recruiting
 non_randomized=Nonrandomized Trial
