--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -470,87 +470,87 @@ crfForm.checkboxesErrorMsg=Only one checkbox should be selected. Please pick 'Ma
 
 ##crf-lib
 importcrf.crfShouldHaveAtLeastOneItem=The CRF should have at least one item.
-importcrf.crfItemNamesShouldNotStartWith=CRF item names should not start with 'sysdvr_' or 'syslbl_'
-importcrf.phiIsNotValid=Item ''{0}'' has wrong phi data
-importcrf.revisionNotesIsBlank=Revision notes is blank
-importcrf.sectionLabelIsBlank=Section label is blank
-importcrf.sectionLabelIsDuplicated=Section label ''{0}'' is duplicated
-importcrf.sectionTitleIsBlank=Section title is blank
-importcrf.groupLabelIsBlank=Group label is blank
-importcrf.groupLabelIsDuplicated=Group label ''{0}'' is duplicated
-importcrf.groupRepeatNumber=Group repeat number must be a positive integer, or blank
-importcrf.groupRepeatMax=Group repeat maximum must be a positive integer, or blank
-importcrf.itemNameIsBlank=Item name is blank
-importcrf.itemNameIsDuplicated=Item name ''{0}'' is duplicated
-importcrf.itemDescriptionIsBlank=Item description is blank
-importcrf.itemNameFormat=You can only use letters or numbers for item name
-importcrf.itemSectionLabelIsNotValid=Section label ''{0}'' is not valid for item name ''{1}''
-importcrf.itemGroupLabelIsNotValid=Group label ''{0}'' is not valid for item name ''{1}''
-importcrf.itemParentItemIsNotValid=Parent item is not valid for item name ''{0}''
-importcrf.hasNestedParentItem=Parent item for item name ''{0}'' has nested parent item
-importcrf.repeatingGroupHasParentItem=Item name ''{0}'' belongs to repeating group and has parent item
-importcrf.resonseTypeIsBlank=Response type is blank for item name ''{0}''
-importcrf.resonseTypeIsNotValid=Response type is not valid for item name ''{0}''
-importcrf.hasRadioWithDefault=ClinCapture does not support default values with radio response type
-importcrf.resonseLabelIsBlank=Response label is blank for item name ''{0}''
-importcrf.resonseOptionsTextIsBlank=Response options text is blank for item name ''{0}''
-importcrf.resonseOptionsValuesIsBlank=Response options values is blank for item name ''{0}''
-importcrf.itemHasDifferentValuesForOptionsText=Response options text can not be different for the same response label ''{0}''
-importcrf.itemHasDifferentNumberOfOptionsText=You have specified different number of Options and Values for item name ''{0}''
-importcrf.itemHasDifferentNumberOfOptionsValues=Response values can not be different for the same response label ''{0}''
-importcrf.itemHasDifferentValuesForOptionsValues=Response values can not be different for the same response label ''{0}''
-importcrf.expressionStartsWithFunc=The expression does not start with 'func' for item name ''{0}''
-importcrf.expressionIsNotValid=The expression is invalid for item name ''{0}''
-importcrf.itemHasIncompleteOptionValuePair=There are an incomplete number of option-value pairs for item name ''{0}''
-importcrf.itemMustBeListedBeforeAnotherItem=Item ''{0}'' must be listed before the item ''{1}''
-importcrf.itemsMustHaveTheSameGroup=Item ''{0}'' and item ''{1}'' must have the same group
-importcrf.itemsShouldNotHaveTheSameGroup=Item ''{0}'' and item ''{1}'' should not have a same group
-importcrf.itemDataTypeIsBlank=Item data type is blank for item name ''{0}''
-importcrf.itemDataTypeIsNotValid=Item data type is not valid for item name ''{0}''
-importcrf.itemDataTypeShouldBeFile=Item data type for item name ''{0}'' sould be 'file'
-importcrf.responseOptionsValuesShouldBeInteger=Response values should be integer for item name ''{0}''
-importcrf.responseOptionsValuesShouldBeReal=Response values should be real for item name ''{0}''
-importcrf.doesNotMatchDataTypeOfItemWithSameResponseLabel=Data type for item ''{0}'' does not match the data type of the item with the same response label ''{1}''
-importcrf.widthDecimalIsNotAvailableFor=Width decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio". Check item ''{0}''
-importcrf.widthDecimalHasErrors=Error message for width decimal for item ''{0}'': {1}
-importcrf.regexpIsNotValid=Regexp is not valid for item ''{0}''
-importcrf.validationColumnIsNotValid=Validation expression is not valid for item ''{0}''
-importcrf.regexpErrorMsgIsBlank=Validation message is blank for item ''{0}''
-importcrf.regexpIsInvalidRegularExpression=Item ''{0}'' has an invalid regular expression
-importcrf.validationColumnHasInvalidRegularExpression=Item ''{0}'' has an invalid regular expression
-importcrf.requiredIsNotValid=Required is not valid for item ''{0}''
-importcrf.itemDisplayStatusIsNotValid=Display status is not valid for item ''{0}''
-importcrf.controlResponseValueIsNotValid=Control response value is not valid for item ''{0}''
-importcrf.controlItemNameIsNotValid=Control item name is not valid for item ''{0}''
-importcrf.simpleConditionalDisplayIsNotValid=SCD is not valid for item ''{0}''
-importcrf.ontologyNameIsNotValid=Ontology name is not valid for item ''{0}''
-importcrf.needToUpdateCodingItemTypeToCode=Need to update coding item type to code for item ''{0}''
-importcrf.needToUpdateMedicalCodingReferenceItemType=Need to update medical coding reference item type for item ''{0}''
-importcrf.responseLabelHasBeenUsedForAnotherResponseType=Response label for item ''{0}'' has been used for another response type
-importcrf.itemOfOneGroupBelongsToMoreThanOneSection=Items of one repeating group spread over several sections. Check items in group ''{0}''
-importcrf.notUniqueItemPlacementInGroups=You have tried to assign the item ''{0}'' to a different item group than was used in previous version(s) of the CRF
-importcrf.checkItem=. Check item ''{0}''
+importcrf.crfItemNamesShouldNotStartWith=CRF item names should not start with 'sysdvr_' or 'syslbl_'.
+importcrf.phiIsNotValid=Item ''{0}'' has wrong phi data.
+importcrf.revisionNotesIsBlank=Revision notes is blank.
+importcrf.sectionLabelIsBlank=Section label is blank.
+importcrf.sectionLabelIsDuplicated=Section label ''{0}'' is duplicated.
+importcrf.sectionTitleIsBlank=Section title is blank.
+importcrf.groupLabelIsBlank=Group label is blank.
+importcrf.groupLabelIsDuplicated=Group label ''{0}'' is duplicated.
+importcrf.groupRepeatNumber=Group repeat number must be a positive integer, or blank.
+importcrf.groupRepeatMax=Group repeat maximum must be a positive integer, or blank.
+importcrf.itemNameIsBlank=Item name is blank.
+importcrf.itemNameIsDuplicated=Item name ''{0}'' is duplicated.
+importcrf.itemDescriptionIsBlank=Item description is blank.
+importcrf.itemNameFormat=You can only use letters or numbers for item name.
+importcrf.itemSectionLabelIsNotValid=Section label ''{0}'' is not valid for item name ''{1}''.
+importcrf.itemGroupLabelIsNotValid=Group label ''{0}'' is not valid for item name ''{1}''.
+importcrf.itemParentItemIsNotValid=Parent item is not valid for item name ''{0}''.
+importcrf.hasNestedParentItem=Parent item for item name ''{0}'' has nested parent item.
+importcrf.repeatingGroupHasParentItem=Item name ''{0}'' belongs to repeating group and has parent item.
+importcrf.resonseTypeIsBlank=Response type is blank for item name ''{0}''.
+importcrf.resonseTypeIsNotValid=Response type is not valid for item name ''{0}''.
+importcrf.hasRadioWithDefault=ClinCapture does not support default values with radio response type.
+importcrf.resonseLabelIsBlank=Response label is blank for item name ''{0}''.
+importcrf.resonseOptionsTextIsBlank=Response options text is blank for item name ''{0}''.
+importcrf.resonseOptionsValuesIsBlank=Response options values is blank for item name ''{0}''.
+importcrf.itemHasDifferentValuesForOptionsText=Response options text can not be different for the same response label ''{0}''.
+importcrf.itemHasDifferentNumberOfOptionsText=You have specified different number of Options and Values for item name ''{0}''.
+importcrf.itemHasDifferentNumberOfOptionsValues=Response values can not be different for the same response label ''{0}''.
+importcrf.itemHasDifferentValuesForOptionsValues=Response values can not be different for the same response label ''{0}''.
+importcrf.expressionStartsWithFunc=The expression does not start with 'func' for item name ''{0}''.
+importcrf.expressionIsNotValid=The expression is invalid for item name ''{0}''.
+importcrf.itemHasIncompleteOptionValuePair=There are an incomplete number of option-value pairs for item name ''{0}''.
+importcrf.itemMustBeListedBeforeAnotherItem=Item ''{0}'' must be listed before the item ''{1}''.
+importcrf.itemsMustHaveTheSameGroup=Item ''{0}'' and item ''{1}'' must have the same group.
+importcrf.itemsShouldNotHaveTheSameGroup=Item ''{0}'' and item ''{1}'' should not have a same group.
+importcrf.itemDataTypeIsBlank=Item data type is blank for item name ''{0}''.
+importcrf.itemDataTypeIsNotValid=Item data type is not valid for item name ''{0}''.
+importcrf.itemDataTypeShouldBeFile=Item data type for item name ''{0}'' sould be 'file'.
+importcrf.responseOptionsValuesShouldBeInteger=Response values should be integer for item name ''{0}''.
+importcrf.responseOptionsValuesShouldBeReal=Response values should be real for item name ''{0}''.
+importcrf.doesNotMatchDataTypeOfItemWithSameResponseLabel=Data type for item ''{0}'' does not match the data type of the item with the same response label ''{1}''.
+importcrf.widthDecimalIsNotAvailableFor=Width decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio". Check item ''{0}''.
+importcrf.widthDecimalHasErrors=Error message for width decimal for item ''{0}'': {1}.
+importcrf.regexpIsNotValid=Regexp is not valid for item ''{0}''.
+importcrf.validationColumnIsNotValid=Validation expression is not valid for item ''{0}''.
+importcrf.regexpErrorMsgIsBlank=Validation message is blank for item ''{0}''.
+importcrf.regexpIsInvalidRegularExpression=Item ''{0}'' has an invalid regular expression.
+importcrf.validationColumnHasInvalidRegularExpression=Item ''{0}'' has an invalid regular expression.
+importcrf.requiredIsNotValid=Required is not valid for item ''{0}''.
+importcrf.itemDisplayStatusIsNotValid=Display status is not valid for item ''{0}''.
+importcrf.controlResponseValueIsNotValid=Control response value is not valid for item ''{0}''.
+importcrf.controlItemNameIsNotValid=Control item name is not valid for item ''{0}''.
+importcrf.simpleConditionalDisplayIsNotValid=SCD is not valid for item ''{0}''.
+importcrf.ontologyNameIsNotValid=Ontology name is not valid for item ''{0}''.
+importcrf.needToUpdateCodingItemTypeToCode=Need to update coding item type to code for item ''{0}''.
+importcrf.needToUpdateMedicalCodingReferenceItemType=Need to update medical coding reference item type for item ''{0}''.
+importcrf.responseLabelHasBeenUsedForAnotherResponseType=Response label for item ''{0}'' has been used for another response type.
+importcrf.itemOfOneGroupBelongsToMoreThanOneSection=Items of one repeating group spread over several sections. Check items in group ''{0}''.
+importcrf.notUniqueItemPlacementInGroups=You have tried to assign the item ''{0}'' to a different item group than was used in previous version(s) of the CRF.
+importcrf.checkItem=. Check item ''{0}''.
 
 ##UserValidator
-userValidator.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study
-userValidator.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site
+userValidator.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
+userValidator.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
 
 ##EventDefinitionValidator
 eventDefinitionValidator.wrongType=Wrong type
-eventDefinitionValidator.doesNotBelongToCurrentStudy=Study Event Definition with id ''{0}'' does not belong to current study ''{1}''
-eventDefinitionValidator.isNotFound=Study Event Definition with id ''{0}'' is not found
-eventDefinitionValidator.calendaredVisitCanNotBeRepeating=Calendared Event cannot be repeating
-eventDefinitionValidator.onlyCalendaredEventsCanBeReferenced=Only Calendared Events can be referenced
-eventDefinitionValidator.dayMaxIsNotUsedForReferenceEvent=Day Max is not used for Reference Event
-eventDefinitionValidator.dayMinIsNotUsedForReferenceEvent=Day Min is not used for Reference Event
-eventDefinitionValidator.dayScheduleIsNotUsedForReferenceEvent=Day Schedule is not used for Reference Event
-eventDefinitionValidator.dayEmailIsNotUsedForReferenceEvent=Day Email is not used for Reference Event
-eventDefinitionValidator.userNameIsNotUsedForReferenceEvent=User Name is not used for Reference Event
-eventDefinitionValidator.dayMaxIsUsedForCalendaredEventsOnly=Day Max is used for Calendared Events only
-eventDefinitionValidator.dayMinIsUsedForCalendaredEventsOnly=Day Min is used for Calendared Events only
-eventDefinitionValidator.dayScheduleIsUsedForCalendaredEventsOnly=Day Schedule is used for Calendared Events only
-eventDefinitionValidator.dayEmailIsUsedForCalendaredEventsOnly=Day Email is used for Calendared Events only
-eventDefinitionValidator.userNameIsUsedForCalendaredEventsOnly=User Name is used for Calendared Events only
+eventDefinitionValidator.doesNotBelongToCurrentStudy=Study Event Definition with id ''{0}'' does not belong to current study ''{1}''.
+eventDefinitionValidator.isNotFound=Study Event Definition with id ''{0}'' is not found.
+eventDefinitionValidator.calendaredVisitCanNotBeRepeating=Calendared Event cannot be repeating.
+eventDefinitionValidator.onlyCalendaredEventsCanBeReferenced=Only Calendared Events can be referenced.
+eventDefinitionValidator.dayMaxIsNotUsedForReferenceEvent=Day Max is not used for Reference Event.
+eventDefinitionValidator.dayMinIsNotUsedForReferenceEvent=Day Min is not used for Reference Event.
+eventDefinitionValidator.dayScheduleIsNotUsedForReferenceEvent=Day Schedule is not used for Reference Event.
+eventDefinitionValidator.dayEmailIsNotUsedForReferenceEvent=Day Email is not used for Reference Event.
+eventDefinitionValidator.userNameIsNotUsedForReferenceEvent=User Name is not used for Reference Event.
+eventDefinitionValidator.dayMaxIsUsedForCalendaredEventsOnly=Day Max is used for Calendared Events only.
+eventDefinitionValidator.dayMinIsUsedForCalendaredEventsOnly=Day Min is used for Calendared Events only.
+eventDefinitionValidator.dayScheduleIsUsedForCalendaredEventsOnly=Day Schedule is used for Calendared Events only.
+eventDefinitionValidator.dayEmailIsUsedForCalendaredEventsOnly=Day Email is used for Calendared Events only.
+eventDefinitionValidator.userNameIsUsedForCalendaredEventsOnly=User Name is used for Calendared Events only.
 eventDefinitionValidator.provideEmailAddress=Please provide email address.
 eventDefinitionValidator.emailAddressIsNotValid=Email address is not valid.
 eventDefinitionValidator.emailCanBeSpecifiedOnlyIf=Email can be specified only if parameter emailwhen is set to 'complete' or 'sign'.
@@ -558,10 +558,14 @@ eventDefinitionValidator.defaultVersionShouldBePresentInTheAvailableVersions=Def
 eventDefinitionValidator.crfDoesNotHaveVersion=CRF ''{0}'' does not have version ''{1}''.
 eventDefinitionValidator.availableVersionsIsEmpty=AvailableVersions parameter is empty.
 eventDefinitionValidator.availableVersionsShouldContainCommaSeparatedCRFVersionIds=AvailableVersions parameter should contain comma separated crf version ids.
-eventDefinitionValidator.alreadyExists=Event Definition Crf for Crf ''{0}'' already exists in study event definition ''{1}''
-eventDefinitionValidator.isNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''
+eventDefinitionValidator.alreadyExists=Event Definition Crf for Crf ''{0}'' already exists in study event definition ''{1}''.
+eventDefinitionValidator.isNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''.
 eventDefinitionValidator.crfEvaluationIsNotAvailable=CRF evaluation is not available.
-eventDefinitionValidator.crfDoesNotHaveSDVRequiredItemsButSDVCodeIs2=Crf with id ''{0}'' does not have SDV required items and therefore the SourceDataVerification should be specified as 1 -> Entire CRF or 3 -> Not Required
-eventDefinitionValidator.crfHasSDVRequiredItemsButSDVCodeIsNot2=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
-eventDefinitionValidator.crfVersionIsNotFound=Crf version is not found with name ''{0}'' and version ''{1}''
-eventDefinitionValidator.crfVersionIsNotAvailable=Crf version is not available
+eventDefinitionValidator.crfDoesNotHaveSDVRequiredItemsButSDVCodeIs2=Crf with id ''{0}'' does not have SDV required items and therefore the SourceDataVerification should be specified as 1 -> Entire CRF or 3 -> Not Required.
+eventDefinitionValidator.crfHasSDVRequiredItemsButSDVCodeIsNot2=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items.
+eventDefinitionValidator.crfVersionIsNotFound=Crf version is not found with name ''{0}'' and version ''{1}''.
+eventDefinitionValidator.crfVersionIsNotAvailable=Crf version is not available.
+
+##StudyValidator
+parametersAreUsedWithProtocolTypeObservational=Parameters duration, selection, timing are used only with protocol type ''1 -> Observational''.
+parametersAreUsedWithProtocolTypeInterventional=Parameters allocation, masking, control, assignment, endPoint are used only with protocol type ''0 -> Interventional''.
