--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -104,8 +104,8 @@ study_evaluator = \u041e\u0446\u0435\u043d\u0449\u0438\u043a
 #site_monitor = Монитор Сайта
 site_monitor = \u041c\u043e\u043d\u0438\u0442\u043e\u0440 \u0421\u0430\u0439\u0442\u0430
 #study_sponsor = Study Sponsor
-#study_coder = Спонсор Исследования
-study_coder = \u0421\u043F\u043E\u043D\u0441\u043E\u0440 \u0418\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#study_sponsor = Спонсор Исследования
+study_sponsor = \u0421\u043F\u043E\u043D\u0441\u043E\u0440 \u0418\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
 #Mother_Maiden_Name =  Mother's Maiden Name
 #Mother_Maiden_Name = Девичья фамилия матери
 Mother_Maiden_Name = \u0414\u0435\u0432\u0438\u0447\u044c\u044f \u0444\u0430\u043c\u0438\u043b\u0438\u044f \u043c\u0430\u0442\u0435\u0440\u0438
@@ -115,6 +115,9 @@ NA =  NA
 #New =  New
 #New = Новый
 New = \u041d\u043e\u0432\u044b\u0439
+#new_dcf = New (DCF)
+#new_dcf = Новый (ФКЗ)
+new_dcf = \u041d\u043e\u0432\u044b\u0439 \u0028\u0424\u041a\u0417\u0029
 #Not_Applicable =  Not Applicable
 #Not_Applicable = Не применимо
 Not_Applicable = \u041d\u0435 \u043f\u0440\u0438\u043c\u0435\u043d\u0438\u043c\u043e
